--- a/src/public/css/university.css
+++ b/src/public/css/university.css
@@ -1,5 +1,11 @@
 .imgRedonda {
-    width: 250px;
-    height: 250px;
+    width: 200px;
+    height: 200px;
     border-radius:150px;
 }
+
+.transparent {
+    background-color: white!important;
+    opacity: 0.65;
+    border-color: transparent!important;
+  }
